Allow building the wasm libs with native emscripten instead of docker
And build them on the mac CI as well as the linux CI

--- a/cli/src/web_ui.html
+++ b/cli/src/web_ui.html
@@ -1,19 +1,25 @@
 <head>
-  <title>Tree-sitter</title>
+  <title>tree-sitter THE_LANGUAGE_NAME</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.45.0/codemirror.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.css">
+  <link rel="icon" type="image/png" href="http://tree-sitter.github.io/tree-sitter/assets/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="http://tree-sitter.github.io/tree-sitter/assets/images/favicon-16x16.png" sizes="16x16" />
 </head>
 
 <body>
   <div id="playground-container">
     <header>
       <div class=header-item>
-        <label for="logging-checkbox">Log</label>
+        <bold>THE_LANGUAGE_NAME</bold>
+      </div>
+
+      <div class=header-item>
+        <label for="logging-checkbox">log</label>
         <input id="logging-checkbox" type="checkbox"></input>
       </div>
 
       <div class=header-item>
-        <label for="update-time">Update time: </label>
+        <label for="update-time">parse time: </label>
         <span id="update-time"></span>
       </div>
     </header>
@@ -44,6 +50,10 @@
   <script src=playground.js></script>
 
   <style>
+    body {
+      font: Sans Serif;
+    }
+
     #playground-container {
       position: absolute;
       top: 0;
@@ -69,7 +79,7 @@
     }
 
     .header-item {
-      margin-right: 20px;
+      margin-right: 30px;
     }
 
     .CodeMirror {
@@ -90,21 +100,28 @@
       margin: 0;
     }
 
-    h4, select, .field {
-      display: inline-block;
-      margin-right: 20px;
-    }
-
     #logging-checkbox {
-      height: 15px;
+      vertical-align: middle;
     }
 
     .CodeMirror div.CodeMirror-cursor {
       border-left: 3px solid red;
     }
 
+    a {
+      text-decoration: none;
+      color: #040404;
+      padding: 2px;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     a.highlighted {
-      background-color: #ddd;
+      background-color: #d9d9d9;
+      color: red;
+      border-radius: 3px;
       text-decoration: underline;
     }
   </style>
